<resources>
    <string name="app_name">KarmaHealth</string>
    <string name="freshchat_file_provider_authority">com.devkraft.karmahealth.provider</string>
    <string name="praveshkre">प्रवेश करें</string>
    <string name="karm">कर्मा प्राइमरी हेल्थ केयर पहचान</string>
    <string name="loginandsignup">लॉगिन करें</string>
    <string name="signupor">साइन अप करें</string>
    <string name="resentotp">ओटीपी पुनः भेजें</string>
    <string name="jari">जारी रखें</string>
    <string name="signup">साइन अप करें</string>
    <string name="signin">साइन इन करें</string>
    <string name="jarirkhkr">जारी रखकर, आप हमारी नीतियों से सहमत हैं!</string>
    <string name="sewa">सेवाओं की शर्ते</string>
    <string name="gopniye">गोपनीयता नीति</string>
    <string name="enterten">कृपया 10 अंकों का मोबाइल नंबर लिखें।</string>
    <string name="entertene">कृपया कर्मा नंम्बर लिखें।</string>
    <string name="entertenzero">कृपया मोबाइल नंबर कि शुरूआत 0 से ना करे।</string>
    <string name="otpcheck">OTP Verification</string>
    <string name="hmne">हमने OTP +91 </string>
    <string name="fmno">, इस नम्बर पर भेज दिया है!</string>
    <string name="doyougetcode">क्या आपको कोई कोड प्राप्त नहीं हुआ?</string>
    <string name="newcodesend">नया कोड फिर से भेजें।</string>
    <string name="mobileno">मोबाइल नंबर डालें।</string>
    <string name="karmaid">कर्मा पहचान संख्या लिखें </string>
    <string name="username">नमस्ते, </string>
    <string name="userdate">आज, 30 अगस्त </string>
    <string name="mymedicin">मेरी दवाएँ </string>
    <string name="mycheckup">नेक्स्ट फॉलो अप</string>
    <string name="timetotake">आप की दवाएँ लेने का समय </string>
    <string name="addnewmedinice">+ नई दवा जोडें </string>
    <string name="morning">सुबह </string>
    <string name="afternoon">दोपहर </string>
    <string name="night">रात </string>
    <string name="evening">शाम </string>
    <string name="naste">(भोजन से पहले)</string>
    <string name="bhojan">(भोजन के बाद)</string>
    <string name="khans">(खाने के बाद)</string>
    <string name="onepill">1 गोली </string>
    <string name="morningnine">सुबह के 9 बजे </string>
    <string name="aterone">दोपहर के 01:00 बजे </string>
    <string name="nightnine">रात के 9 बजे </string>
    <string name="uploaddoctor">उपलब्ध डॉक्टर्स </string>
    <string name="uploaddoctorthistime">इस समय डॉक्टर उपलब्ध हैं </string>
    <string name="mytracck">मेरे ट्रैकर्स </string>
    <string name="importanttrack">आपके महत्वपूर्ण ट्रैक रेकार्ड </string>
    <string name="drkiperchi">डॉक्टर प्रिस्क्रिप्शन्स</string>
    <string name="agarappdekvs">अगर आप देखना चाहते हैं तो यहां देख सकते हैं </string>
    <string name="search">खोज</string>
    <string name="genraldr">सामान्य चिकित्सक</string>
    <string name="twontiplus">लगभग 20+ डॉक्टर अभी उपलब्ध हैं</string>
    <string name="nosedr">कान-नाक-गला विशेषज्ञ</string>
    <string name="harddr">हर्दय रोग विशेषज्ञ</string>
    <string name="jathardr">जठर रोग विशेषज्ञ</string>
    <string name="heardr">बाल विशेषज्ञ</string>
    <string name="seckendr">त्वचा विशेषज्ञ</string>
    <string name="racktdr">रक्त-दाब</string>
    <string name="shwasnidar">श्र्वसन दर</string>
    <string name="hearddar">ह्रदय दर</string>
    <string name="rackt">रक्त शर्करा</string>
    <string name="report">रिपोर्ट</string>
    <string name="startingdate">प्रारंभ तारीख</string>
    <string name="enddate">अंतिम तारीख</string>
    <string name="date">दिनांक</string>
    <string name="time">समय</string>
    <string name="sistolik">सिस्टोलिक (मिमी एचजी)</string>
    <string name="daybatig">डायस्टोलिक (मिमी एचजी)</string>
    <string name="save">जमा करें</string>
    <string name="drug_name">दवा का नाम</string>
    <string name="search_hint">दवा का नाम दर्ज करें</string>
    <string name="start_date">आरंभ करने की तारीख</string>
    <string name="end_date">अंतिम तारीख</string>
    <string name="standard_schedule">मानक अनुसूची</string>
    <string name="looking_for_more_flexible_set_up">अधिक लचीले सेट अप की तलाश है? </string>
    <string name="try_custom_schedule"> स्मार्ट शेड्यूल आज़माएं</string>
    <string name="tablet">टैबलेट</string>
    <string name="injection">इंजेक्शन</string>
    <string name="liquid">सिरप</string>
    <string name="other">अन्य</string>
    <string name="frequency">आवृत्ति</string>
    <string-array name="frequency_adapter" translatable="false">
        <item>चुनना</item>
        <item>रोज</item>
        <item>साप्ताहिक</item>
        <item>महीने के</item>

    </string-array>
    <string name="dosage">मात्रा बनाने की विधि</string>
    <string name="dosagetype">दवाई लेने का तरीका</string>
    <string name="prescribed_dosage_hint"> <font size="15">जैसे 100 मिलीग्राम, 30 मिली, 2 गोलियाँ</font></string>
    <string name="dont_see_dosage">अपनी खुराक नहीं देख पा रहे हैं?</string>
    <string name="pick_your_time">अपना समय चुनें</string>
    <string name="prescribed_dosage">निर्धारित खुराक</string>
    <string name="prescribed_dosage_physician">कृपया अपने चिकित्सक द्वारा निर्धारित खुराक दर्ज करें</string>
    <string name="no_end_date">कोई अंतिम तिथि नहीं</string>
    <string name="doses_per_day">खुराक प्रति दिन</string>
    <string name="dosage_name_is_required">खुराक का नाम आवश्यक है</string>
    <string name="edit_dependent">आश्रित संपादित करें</string>
    <string name="clear_label">साफ़</string>
    <string name="dosage_summary">खुराक सारांश</string>
    <string name="save_label">संचय</string>
    <string name="remove">हटाना</string>
    <string name="cant_find_your_drug" translatable="false">आप जिस दवा की तलाश कर रहे हैं वह नहीं मिल रही है? &#160;<font color="#4abc93">Click Here</font></string>
    <string name="add_custom_dosage">स्मार्ट शेड्यूल जोड़ें</string>
    <string name="back_to_standard_dosage">मानक अनुसूची पर वापस जाएं</string>
    <string name="route_label">रास्ता</string>
    <string-array name="route_adapter" translatable="false">
        <item>चुनना</item>
        <item>गोली</item>
        <item>इंजेक्शन</item>
        <item>तरल</item>
        <item>अन्य</item>
    </string-array>
    <string name="select_days">दिन चुनें</string>
    <string name="dosage_label">मात्रा बनाने की विधि</string>
    <string name="set_time">निर्धारित समय</string>
    <string-array name="hours_of_day_adapter" translatable="false">
        <item>Select</item>
        <item>12:00 am</item>
        <item>01:00 am</item>
        <item>02:00 am</item>
        <item>03:00 am</item>
        <item>04:00 am</item>
        <item>05:00 am</item>
        <item>06:00 am</item>
        <item>07:00 am</item>
        <item>08:00 am</item>
        <item>09:00 am</item>
        <item>10:00 am</item>
        <item>11:00 am</item>
        <item>12:00 pm</item>
        <item>01:00 pm</item>
        <item>02:00 pm</item>
        <item>03:00 pm</item>
        <item>04:00 pm</item>
        <item>05:00 pm</item>
        <item>06:00 pm</item>
        <item>07:00 pm</item>
        <item>08:00 pm</item>
        <item>09:00 pm</item>
        <item>10:00 pm</item>
        <item>11:00 pm</item>
    </string-array>
    <string-array name="days_of_week_adapter" translatable="false">
        <item>रविवार</item>
        <item>सोमवार</item>
        <item>मंगलवार</item>
        <item>बुधवार</item>
        <item>गुरुवार</item>
        <item>शुक्रवार</item>
        <item>शनिवार</item>
    </string-array>
    <string name="refill_reminder">रिफिल रिमाइंडर</string>
    <string name="no_result_found">कोई परिणाम नहीं मिला</string>
    <string name="space">&#160;</string>
    <string name="you_can_not_add_more_than_dosage">आप इससे अधिक नहीं जोड़ सकते</string>
    <string name="dosages">खुराक</string>
    <string name="days">दिन</string>
    <string name="drug_daily" translatable="false">रोज</string>
    <string name="drug_weekly" translatable="false">साप्ताहिक</string>
    <string name="drug_monthly" translatable="false">महीने के</string>
    <string name="add_drug">दवा जोड़ें</string>
    <string name="choose_from_standard_dosage">मानक खुराक में से चुनें</string>
    <string name="cant_find_drug">आपकी दवा नहीं मिल रही है?</string>
    <string name="cant_find_drug_line">हम अपने प्लेटफॉर्म पर और दवाएं जोड़ने के लिए लगातार काम कर रहे हैं।</string>
    <string name="cant_find_drug_line1">कृपया उस दवा को निर्दिष्ट करें जिसे आप प्रबंधित करना चाहते हैं और हम कोशिश करेंगे और उसे मंच पर जोड़ देंगे और आपसे संपर्क करेंगे।</string>
    <string name="cant_find_disease">आपकी स्थिति नहीं मिल रही है?</string>
    <string name="cant_find_disease_line">हम अपने स्वास्थ्य विशेषज्ञों के साथ लगातार काम कर रहे हैं ताकि हमारे मंच पर अधिक स्थिति संबंधी प्रवाह शामिल हो सकें।</string>
    <string name="cant_find_disease_line1">कृपया वह स्थिति निर्दिष्ट करें जिसे आप प्रबंधित करना चाहते हैं और वर्तमान में सूचीबद्ध दिखाई नहीं दे रही है। हम इसके लिए एक कार्यप्रवाह तैयार करेंगे और इसे जोड़ने के बाद आपको सूचित करेंगे।</string>
    <string name="condition_name">शर्त का नाम</string>
    <string name="please_enter_valid_drug">कृपया मान्य दवा दर्ज करें</string>
    <string name="please_select_route_value">कृपया मार्ग मान चुनें।</string>
    <string name="please_enter_valid_condition">कृपया मान्य शर्त दर्ज करें</string>
    <string name="ok">ठीक है</string>
    <string name="request_drug_success">धन्यवाद! आपका मेडिसिन अनुरोध सफलतापूर्वक सबमिट कर दिया गया है।</string>
    <string name="request_disease_success">धन्यवाद! आपका अनुरोध सफलतापूर्वक सबमिट कर दिया गया है।</string>
    <string name="you_are_scheduled_to_take">आप लेने के लिए निर्धारित हैं</string>
    <string name="on">पर</string>
    <string name="and_symbol" translatable="false"><![CDATA[&]]></string>
    <string name="comma" translatable="false">,</string>
    <string name="of_every_month">हर महीने का</string>
    <string name="of">का</string>
    <string name="at">पर</string>
    <string name="cancel">CANCEL</string>
    <string name="proceed">PROCEED</string>
    <string name="drug_reminders" translatable="false">Medicine Reminders</string>
    <string name="submit">प्रस्तुत करना</string>
    <string name="time_our_error">समय समाप्त।</string>
    <string name="done">सेव</string>
    <string name="chronic_condition_management">पुरानी स्थिति प्रबंधन</string>
    <string name="tracking_multiple_dependents_their_schedules">कई आश्रितों और उनके अनुसूचियों की ट्रैकिंग</string>
    <string name="weekly_progress_reports">साप्ताहिक प्रगति रिपोर्ट</string>
    <string name="pubmed_research_with_access">हजारों स्वास्थ्य संबंधी शोध लेखों तक पहुंच के साथ प्रकाशित शोध।</string>
    <string name="yes_delete">हां, हटाएं</string>
    <string name="text_no_keep">नहीं, रखें</string>
    <string name="delete_condition_msg"> कंडीशन से सारा इतिहास साफ़ हो जाएगा &amp; इससे संबंधित ट्रैकर्स (आपके द्वारा जोड़े गए किसी भी अन्य शर्त के साथ सामान्य ट्रैकर्स को छोड़कर)। </string>
    <string name="premium_line1" translatable="false">कई आश्रितों और उनके शेड्यूल को ट्रैक करें</string>
    <string name="premium_line2" translatable="false">अपनी दवा पालन आदतों को ट्रैक करें</string>
    <string name="premium_line3" translatable="false">साप्ताहिक स्वास्थ्य रिपोर्ट प्राप्त करें</string>
    <string name="premium_line4" translatable="false">पबमेड से हजारों शोध लेख खोजें और पढ़ें</string>
    <string name="upgrade_to_kym_premium">KnowYourMeds Premium में अपग्रेड करें और:</string>
    <string name="premium">बीमा किस्त</string>
    <string name="kym">KnowYourMeds</string>
    <string name="go_premium">प्रीमियम के लिए जाएँ</string>
    <string name="kym_premium_lbl">KnowYourMeds प्रीमियम</string>
    <string name="count">गिनती करना</string>
    <string name="severity">तीव्रता</string>
    <string name="select_type_of_symptom">लक्षण के प्रकार का चयन करें</string>
    <string name="are_you_sure_you_want_to_remove_this">क्या आप वाकई निकालना चाहते हैं</string>
    <string name="delete_this_vaccine" translatable="false">इस टीके को हटाने से यह आपकी प्रोफ़ाइल के लिए निकल जाएगा लेकिन आप अपने डेटा को पुनर्स्थापित करने के लिए इसे कभी भी फिर से जोड़ सकते हैं।</string>
</resources>