<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/are_you_sure_you_want_to_remove_this"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:textSize="14sp"
        android:visibility="gone"
        android:gravity="center"
        android:text="@string/delete_this_vaccine"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/featureLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_unsubscribe_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/chronic_condition_management"
                android:layout_height="wrap_content" />


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_unsubscribe_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/tracking_multiple_dependents_their_schedules"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_unsubscribe_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/weekly_progress_reports"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_unsubscribe_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/pubmed_research_with_access"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </LinearLayout>



</LinearLayout>