<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="5dp"
        card_view:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textview_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/select_type_of_symptom"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/grayish_brown"/>

            <RadioGroup
                android:id="@+id/redio_group_symptom_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/severity"
                    android:layout_marginTop="15dp"
                    android:id="@+id/input_button_severity"
                    android:paddingRight="10dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:id="@+id/input_button_count"
                    android:paddingRight="20dp"/>
            </RadioGroup>


            <Button
                android:id="@+id/button_done"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_shape_button"
                android:backgroundTint="#00b398"
                android:text="@string/done"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>

